--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,9 @@
         "php": "^7.2"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "^3.5",
-        "phpmd/phpmd": "^2.8"
+        "phpunit/phpunit": "^8.5",
+        "phpmd/phpmd": "^2.8",
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "autoload": {
         "classmap": [
@@ -23,7 +24,8 @@
     "scripts": {
         "test": [
             "vendor/bin/phpcs --standard=PSR1,PSR2,PSR12 --error-severity=1 --warning-severity=8 src",
-            "vendor/bin/phpmd src text codesize, controversial, design, naming, unusedcode"
+            "vendor/bin/phpmd src text codesize, controversial, design, naming, unusedcode",
+            "vendor/bin/phpunit --testdox tests"
         ],
         "fix": [
             "vendor/bin/phpcbf --standard=PSR1,PSR12 src"
